<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_student_home">

    <fragment
        android:id="@+id/nav_student_home"
        android:name="com.USMS.Mobile.ui.student_side.StudentHomeFragment"
        android:label="@string/menu_student_home"
        tools:layout="@layout/fragment_student_home" />
    <fragment
        android:id="@+id/nav_student_result"
        android:name="com.USMS.Mobile.ui.student_side.StudentResultFragment"
        android:label="@string/menu_student_result"
        tools:layout="@layout/fragment_student_result" />
    <fragment
        android:id="@+id/nav_student_notif"
        android:name="com.USMS.Mobile.ui.student_side.StudentNotifFragment"
        android:label="@string/menu_student_notif"
        tools:layout="@layout/fragment_student_notif" />
    <fragment
        android:id="@+id/nav_student_table"
        android:name="com.USMS.Mobile.ui.student_side.StudentTableFragment"
        android:label="@string/menu_student_table"
        tools:layout="@layout/fragment_student_table" />
    <fragment
        android:id="@+id/nav_student_acro"
        android:name="com.USMS.Mobile.ui.student_side.StudentAcroFragment"
        android:label="@string/menu_student_accro"
        tools:layout="@layout/fragment_student_acronyme" />
    <fragment
        android:id="@+id/nav_student_disco"
        android:name="com.USMS.Mobile.ui.student_side.StudentDiscoFragment"
        android:label="@string/menu_student_disco"
        tools:layout="@layout/fragment_student_disco" />

</navigation>